modelando a classe TesteQA e pom.xml